# goit-pyweb-7

./: config.ini  database.py  models.py  my_select.py  pyproject.toml  seed.py
alembic/: env.py
alembic/versions/: 00eb2a9a2339_init.py
